--- a/styles.scss
+++ b/styles.scss
@@ -52,7 +52,7 @@ nav {
 }
 header {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,7 +60,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(assets/header-bg-img/Group\ 327.png );
+  background-image: url(assets/header-bg-img/Group\ 327.png);
   .header-conts {
     width: inherit;
     display: flex;
@@ -72,17 +72,21 @@ header {
       h1 {
         font-size: clamp(33px, 10vw, 90px);
       }
-      p{
+      p {
         font-size: 18px;
         max-width: 600px;
         margin: 30px 0;
       }
-      button{
+      button {
         padding: 14px 12px;
         border: none;
         font-weight: 600;
         border-radius: 20px;
-        background: linear-gradient(90deg, rgba(8,0,255,1) 0%, rgba(255,158,0,1) 100%);
+        background: linear-gradient(
+          90deg,
+          rgba(8, 0, 255, 1) 0%,
+          rgba(255, 158, 0, 1) 100%
+        );
         color: #fff;
         font-size: 22px;
         margin: 10px;
@@ -99,7 +103,7 @@ header {
         );
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
         animation: infinite 20s fancyHeroShape;
-        transition: .3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
         @keyframes fancyHeroShape {
           0% {
             border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
@@ -135,6 +139,57 @@ header {
             border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
           }
         }
+      }
+    }
+  }
+}
+
+main {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  #advantages-sec {
+    width: inherit;
+    height: auto;
+    display: flex;
+    flex-direction: inherit;
+    justify-content: center;
+    align-items: center;
+    #title {
+      font-size: 48px;
+    }
+    #advantage-container {
+      padding-top: 60px;
+      display: flex;
+      justify-content: center;
+
+      flex-wrap: wrap;
+      #adv-content {
+        width: 400px;
+        height: 200px;
+        padding: 22px;
+        display: flex;
+        justify-content: space-evenly;
+        margin: 10px;
+        border-radius: 30px;
+        img {
+          width: 300px;
+          object-fit: cover;
+        }
+      }
+      #adv-content:nth-child(1) {
+        background: linear-gradient(135deg, #f7cf31, #ff7e5f, #feb47b);
+      }
+      #adv-content:nth-child(2) {
+        background: linear-gradient(135deg, #f7cf31, #1c92d2, #f2fcfe);
+      }
+      #adv-content:nth-child(3) {
+        background: linear-gradient(135deg, #f7cf31, #e17055, #d63031);
+      }
+      #adv-content:nth-child(4) {
+        background: linear-gradient(135deg, #f7cf31, #e17055, #d63031);
       }
     }
   }
