--- a/styles.scss
+++ b/styles.scss
@@ -58,6 +58,7 @@ header {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  background-repeat: no-repeat;
   background-image: url(assets/header-bg-img/Group\ 327.png );
   .header-conts {
     width: inherit;
@@ -69,6 +70,20 @@ header {
     .desciption {
       h1 {
         font-size: clamp(33px, 10vw, 90px);
+      }
+      p{
+        font-size: 18px;
+        max-width: 600px;
+        margin: 30px 0;
+      }
+      button{
+        padding: 14px 12px;
+        border: none;
+        font-weight: 600;
+        border-radius: 20px;
+        background: linear-gradient(90deg, rgba(8,0,255,1) 0%, rgba(255,158,0,1) 100%);
+        color: #fff;
+        font-size: 22px;
       }
     }
     .header-hero-img {
@@ -82,6 +97,7 @@ header {
         );
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
         animation: infinite 20s fancyHeroShape;
+        transition: .3s all cubic-bezier(0.075, 0.82, 0.165, 1);
         @keyframes fancyHeroShape {
           0% {
             border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
