--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ body {
 
 nav {
   z-index: 100;
-  position: fixed;
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 80px;
   display: flex;
@@ -34,7 +35,7 @@ nav ul li a {
   color: rgba(0, 0, 0, 0.7960784314);
   font-weight: 700;
 }
-nav button {
+nav #menu {
   padding: 14px 20px;
   font-weight: 600;
   border-radius: 22px;
@@ -47,44 +48,47 @@ nav button {
 
 header {
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url(assets/header-bg-img/Group\ 327.png);
-}
-header .header-conts {
-  width: inherit;
-  display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  padding: 10px;
   flex-wrap: wrap;
-  padding: 20px;
+  align-items: center;
+  background-image: url(assets/header-bg-img/Group\ 327.png);
+  background-position: center;
+  background-attachment: fixed;
 }
-header .header-conts .desciption h1 {
-  font-size: clamp(33px, 10vw, 90px);
+header .description h1 {
+  font-weight: 900;
+  text-shadow: 3px 10px 10px rgba(0, 0, 0, 0.2392156863);
+  font-size: clamp(44px, 5vw, 80px);
 }
-header .header-conts .desciption p {
-  font-size: 18px;
-  max-width: 600px;
-  margin: 30px 0;
+header .description h1 #main-txt-h1 {
+  background: -webkit-linear-gradient(90deg, rgb(255, 141, 0) 30%, rgb(48, 42, 255) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(90deg, rgb(255, 141, 0) 30%, rgb(48, 42, 255) 100%);
+  background-clip: text;
+  color: transparent;
 }
-header .header-conts .desciption button {
-  padding: 14px 12px;
-  border: none;
-  font-weight: 600;
-  border-radius: 20px;
-  background: linear-gradient(90deg, rgb(8, 0, 255) 0%, rgb(255, 158, 0) 100%);
-  color: #fff;
+header .description p {
   font-size: 22px;
-  margin: 10px;
+  margin: 10px 0;
 }
-header .header-conts .header-hero-img #fancy-hero-shape {
-  width: 400px;
-  height: 400px;
+header .description button {
+  padding: 14px 20px;
+  font-size: 22px;
+  font-weight: 700;
+  border-radius: 35px;
+  border: none;
+  background: linear-gradient(260deg, rgb(255, 141, 0) 0%, rgb(48, 42, 255) 100%);
+  color: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+header #hero #fancy-hero-shape {
+  max-width: 600px;
+  max-height: 600px;
+  padding: 10px;
   background-image: linear-gradient(90deg, rgb(255, 158, 0) 0%, rgb(255, 38, 0) 100%);
   border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
   animation: infinite 20s fancyHeroShape;
@@ -124,57 +128,6 @@ header .header-conts .header-hero-img #fancy-hero-shape {
   100% {
     border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
   }
-}
-
-main {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-main #advantages-sec {
-  width: inherit;
-  height: auto;
-  display: flex;
-  flex-direction: inherit;
-  justify-content: center;
-  align-items: center;
-}
-main #advantages-sec #title {
-  font-size: 48px;
-}
-main #advantages-sec #advantage-container {
-  padding-top: 60px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-main #advantages-sec #advantage-container #adv-content {
-  width: 400px;
-  height: 200px;
-  padding: 22px;
-  display: flex;
-  justify-content: space-evenly;
-  margin: 10px;
-  border-radius: 30px;
-}
-main #advantages-sec #advantage-container #adv-content img {
-  width: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-main #advantages-sec #advantage-container #adv-content:nth-child(1) {
-  background: linear-gradient(135deg, #f7cf31, #ff7e5f, #feb47b);
-}
-main #advantages-sec #advantage-container #adv-content:nth-child(2) {
-  background: linear-gradient(135deg, #f7cf31, #1c92d2, #f2fcfe);
-}
-main #advantages-sec #advantage-container #adv-content:nth-child(3) {
-  background: linear-gradient(135deg, #f7cf31, #e17055, #d63031);
-}
-main #advantages-sec #advantage-container #adv-content:nth-child(4) {
-  background: linear-gradient(135deg, #f7cf31, #e17055, #d63031);
 }
 
 @media screen and (max-width: 660px) {
