--- a/styles.scss
+++ b/styles.scss
@@ -16,7 +16,8 @@ body {
 }
 nav {
   z-index: 100;
-  position: fixed;
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 80px;
   display: flex;
@@ -34,8 +35,7 @@ nav {
       }
     }
   }
-
-  button {
+  #menu {
     padding: 14px 20px;
     font-weight: 600;
     border-radius: 22px;
@@ -52,149 +52,108 @@ nav {
 }
 header {
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  padding: 10px;
+  flex-wrap: wrap;
   align-items: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-repeat: no-repeat;
   background-image: url(assets/header-bg-img/Group\ 327.png);
-  .header-conts {
-    width: inherit;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 20px;
+  background-position: center;
+  background-attachment: fixed;
 
-    .desciption {
-      h1 {
-        font-size: clamp(33px, 10vw, 90px);
-      }
-      p {
-        font-size: 18px;
-        max-width: 600px;
-        margin: 30px 0;
-      }
-      button {
-        padding: 14px 12px;
-        border: none;
-        font-weight: 600;
-        border-radius: 20px;
+  .description {
+    h1 {
+      font-weight: 900;
+      text-shadow: 3px 10px 10px #0000003d;
+      font-size: clamp(44px, 5vw, 80px);
+      #main-txt-h1 {
+        background: -webkit-linear-gradient(
+          90deg,
+          rgba(255, 141, 0, 1) 30%,
+          rgba(48, 42, 255, 1) 100%
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         background: linear-gradient(
           90deg,
-          rgba(8, 0, 255, 1) 0%,
-          rgba(255, 158, 0, 1) 100%
+          rgba(255, 141, 0, 1) 30%,
+          rgba(48, 42, 255, 1) 100%
         );
-        color: #fff;
-        font-size: 22px;
-        margin: 10px;
+        background-clip: text;
+        color: transparent;
       }
     }
-    .header-hero-img {
-      #fancy-hero-shape {
-        width: 400px;
-        height: 400px;
-        background-image: linear-gradient(
-          90deg,
-          rgba(255, 158, 0, 1) 0%,
-          rgba(255, 38, 0, 1) 100%
-        );
+    p {
+      font-size: 22px;
+      margin: 10px 0;
+    }
+    button {
+      padding: 14px 20px;
+      font-size: 22px;
+      font-weight: 700;
+      border-radius: 35px;
+      border: none;
+      background: linear-gradient(
+        260deg,
+        rgba(255, 141, 0, 1) 0%,
+        rgba(48, 42, 255, 1) 100%
+      );
+      color: #fff;
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    }
+  }
+  #hero {
+    #fancy-hero-shape {
+      max-width: 600px;
+      max-height: 600px;
+      padding: 10px;
+      background-image: linear-gradient(
+        90deg,
+        rgba(255, 158, 0, 1) 0%,
+        rgba(255, 38, 0, 1) 100%
+      );
+      border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+      animation: infinite 20s fancyHeroShape;
+      transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    @keyframes fancyHeroShape {
+      0% {
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-        animation: infinite 20s fancyHeroShape;
-        transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
-        @keyframes fancyHeroShape {
-          0% {
-            border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-          }
-          10% {
-            border-radius: 89% 11% 35% 65% / 30% 30% 70% 70%;
-          }
-          20% {
-            border-radius: 89% 11% 35% 65% / 30% 77% 23% 70%;
-          }
-          30% {
-            border-radius: 36% 64% 35% 65% / 84% 77% 23% 16%;
-          }
-          40% {
-            border-radius: 36% 64% 35% 65% / 84% 15% 85% 16%;
-          }
-          50% {
-            border-radius: 36% 64% 35% 65% / 32% 15% 85% 68%;
-          }
-          60% {
-            border-radius: 36% 64% 35% 65% / 32% 83% 17% 68%;
-          }
-          70% {
-            border-radius: 34% 66% 35% 65% / 82% 35% 65% 18%;
-          }
-          80% {
-            border-radius: 34% 66% 7% 93% / 82% 81% 19% 18%;
-          }
-          90% {
-            border-radius: 95% 5% 71% 29% / 33% 29% 71% 67%;
-          }
-          100% {
-            border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-          }
-        }
+      }
+      10% {
+        border-radius: 89% 11% 35% 65% / 30% 30% 70% 70%;
+      }
+      20% {
+        border-radius: 89% 11% 35% 65% / 30% 77% 23% 70%;
+      }
+      30% {
+        border-radius: 36% 64% 35% 65% / 84% 77% 23% 16%;
+      }
+      40% {
+        border-radius: 36% 64% 35% 65% / 84% 15% 85% 16%;
+      }
+      50% {
+        border-radius: 36% 64% 35% 65% / 32% 15% 85% 68%;
+      }
+      60% {
+        border-radius: 36% 64% 35% 65% / 32% 83% 17% 68%;
+      }
+      70% {
+        border-radius: 34% 66% 35% 65% / 82% 35% 65% 18%;
+      }
+      80% {
+        border-radius: 34% 66% 7% 93% / 82% 81% 19% 18%;
+      }
+      90% {
+        border-radius: 95% 5% 71% 29% / 33% 29% 71% 67%;
+      }
+      100% {
+        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
       }
     }
   }
 }
-
-main {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  #advantages-sec {
-    width: inherit;
-    height: auto;
-    display: flex;
-    flex-direction: inherit;
-    justify-content: center;
-    align-items: center;
-    #title {
-      font-size: 48px;
-    }
-    #advantage-container {
-      padding-top: 60px;
-      display: flex;
-      justify-content: center;
-
-      flex-wrap: wrap;
-      #adv-content {
-        width: 400px;
-        height: 200px;
-        padding: 22px;
-        display: flex;
-        justify-content: space-evenly;
-        margin: 10px;
-        border-radius: 30px;
-        img {
-          width: 300px;
-          object-fit: cover;
-        }
-      }
-      #adv-content:nth-child(1) {
-        background: linear-gradient(135deg, #f7cf31, #ff7e5f, #feb47b);
-      }
-      #adv-content:nth-child(2) {
-        background: linear-gradient(135deg, #f7cf31, #1c92d2, #f2fcfe);
-      }
-      #adv-content:nth-child(3) {
-        background: linear-gradient(135deg, #f7cf31, #e17055, #d63031);
-      }
-      #adv-content:nth-child(4) {
-        background: linear-gradient(135deg, #f7cf31, #e17055, #d63031);
-      }
-    }
-  }
-}
-
 @media screen and (max-width: 660px) {
   nav {
     #nav-res {
