--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ nav #menu {
 }
 
 header {
-  width: 100%;
+  max-width: 100%;
   height: 120vh;
   display: flex;
   justify-content: space-around;
@@ -148,5 +148,15 @@ header #hero #fancy-hero-shape {
   nav button {
     display: block;
     z-index: 130;
+  }
+  header {
+    flex-direction: column;
+  }
+  header #hero {
+    width: 300px;
+    height: 300px;
+  }
+  header #hero img {
+    width: inherit;
   }
 }/*# sourceMappingURL=styles.css.map */
