--- a/styles.scss
+++ b/styles.scss
@@ -51,7 +51,7 @@ nav {
   }
 }
 header {
-  width: 100%;
+  max-width: 100%;
   height: 120vh;
   display: flex;
   justify-content: space-around;
@@ -172,6 +172,16 @@ header {
     button {
       display: block;
       z-index: 130;
+    }
+  }
+  header{
+    flex-direction: column;
+    #hero{
+      width: 300px;
+      height: 300px;
+      img{
+        width: inherit;
+      }
     }
   }
 }
