--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,37 @@
   transition: 0.7s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+::-moz-selection {
+  background-color: #fff;
+  color: #f7cf31;
+}
+
+::selection {
+  background-color: #fff;
+  color: #f7cf31;
+}
+
 body {
   height: 100vh;
   background: #f7cf31;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 nav {
-  z-index: 100;
-  position: absolute;
+  z-index: 110;
+  position: sticky;
   top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+nav #logo {
+  z-index: 120;
 }
 nav ul {
   list-style: none;
@@ -42,8 +58,8 @@ nav #menu {
   font-size: 20px;
   color: #fff;
   border: none;
-  background: linear-gradient(90deg, rgb(255, 158, 0) 0%, rgb(255, 38, 0) 100%);
   display: none;
+  background: linear-gradient(90deg, rgb(255, 158, 0) 0%, rgb(255, 38, 0) 100%);
 }
 
 header {
@@ -130,33 +146,147 @@ header #hero #fancy-hero-shape {
   }
 }
 
+main {
+  width: 100%;
+  height: auto;
+  padding: 20px;
+}
+main h2#title {
+  font-size: 32px;
+  text-align: center;
+  text-transform: uppercase;
+}
+main #advantages-part {
+  width: inherit;
+}
+main #advantages-part #advanteges-container {
+  width: inherit;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 50px;
+}
+main #advantages-part #advanteges-container #contents {
+  border: 1px solid #000;
+  border-radius: 16px;
+  width: 440px;
+  height: 200px;
+  margin: 10px;
+  padding: 12px;
+  display: inherit;
+  transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+main #advantages-part #advanteges-container #contents:hover {
+  color: #fff;
+  transform: scale(1.2);
+}
+main #advantages-part #advanteges-container #contents #contents:nth-child(1):hover {
+  background: linear-gradient(70.8deg, rgb(253, 70, 90) 24%, rgb(31, 42, 147) 92.4%);
+}
+main #advantages-part #advanteges-container #contents #contents:nth-child(2):hover {
+  background: radial-gradient(circle at 10% 20%, rgb(255, 131, 61) 0%, rgb(249, 183, 23) 90%);
+}
+main #advantages-part #advanteges-container #contents #contents:nth-child(3):hover {
+  background: linear-gradient(109.6deg, rgb(5, 85, 84) 11.2%, rgb(64, 224, 208) 91.1%);
+}
+main #advantages-part #advanteges-container #contents #contents:hover:nth-child(4) {
+  background: radial-gradient(circle at 10% 20%, rgb(99, 55, 255) 0%, rgb(39, 170, 255) 90%);
+}
+main #advantages-part #advanteges-container #contents img {
+  width: 200px;
+}
+main #advantages-part #advanteges-container #contents #info-ad {
+  padding: 10px;
+  position: relative;
+}
+main #advantages-part #advanteges-container #contents #info-ad .rigt-dot {
+  position: absolute;
+  padding: 12px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  top: 0;
+  right: 0;
+}
+main #teachers-part {
+  padding: 50px 10px;
+}
+main #teachers-part #container-of-tr {
+  display: flex;
+  justify-content: center;
+  padding-top: 90px;
+  display: flex;
+}
+main #teachers-part #container-of-tr #teachers {
+  color: #fff;
+  background-color: #800503;
+  width: 500px;
+  height: 530px;
+  text-align: center;
+  border-radius: 17px;
+}
+main #teachers-part #container-of-tr #teachers img {
+  position: relative;
+  top: -60px;
+  border-radius: 24px;
+  width: 460px;
+}
+main #teachers-part #container-of-tr #teachers h2 {
+  font-size: 32px;
+}
+main #teachers-part #container-of-tr #teachers p {
+  margin: 10px;
+}
+main #teachers-part #container-of-tr #teachers a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 20px;
+  background: linear-gradient(302deg, rgb(255, 89, 0) 0%, rgb(254, 229, 116) 100%);
+  font-size: 22px;
+  font-weight: 700;
+  position: relative;
+  top: 30px;
+  border-radius: 22px;
+}
+
 @media screen and (max-width: 660px) {
   nav #nav-res {
-    transition: 0.4s all cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: 0.2s all ease-in;
     position: fixed;
-    top: -100%;
-    left: 0;
-    padding: 70px 30px;
+    top: 0;
+    left: -100%;
+    padding: 100px 0;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 100vh;
     -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
-    height: auto;
+    height: 100%;
     z-index: 110;
   }
-  nav button {
+  nav #nav-res li {
+    margin: 5px;
+    padding: 20px;
+    border-radius: 20px;
+    width: 90%;
+    background-color: rgba(255, 255, 255, 0.5058823529);
+    text-align: center;
+  }
+  nav #nav-res li a {
+    color: #fff;
+  }
+  nav #menu {
     display: block;
     z-index: 130;
   }
   header {
     flex-direction: column;
   }
-  header #hero {
+  header #hero #fancy-hero-shape {
     width: 300px;
     height: 300px;
   }
-  header #hero img {
+  header #hero #fancy-hero-shape img {
     width: inherit;
   }
 }/*# sourceMappingURL=styles.css.map */
