--- a/styles.scss
+++ b/styles.scss
@@ -6,6 +6,10 @@
   font-family: "Raleway", sans-serif;
   transition: 0.7s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+::selection {
+  background-color: #fff;
+  color: #f7cf31;
+}
 $backhground-primary-clr: #f7cf31;
 $primary-txt-clr: #d8d9db;
 $secondary-txt-clr: #000000cb;
@@ -13,16 +17,22 @@ body {
   height: 100vh;
   background: $backhground-primary-clr;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 nav {
-  z-index: 100;
-  position: absolute;
+  z-index: 110;
+  position: sticky;
   top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  #logo{
+    z-index: 120;
+  }
   ul {
     list-style: none;
     display: inherit;
@@ -42,12 +52,12 @@ nav {
     font-size: 20px;
     color: #fff;
     border: none;
+    display: none;
     background: linear-gradient(
       90deg,
       rgba(255, 158, 0, 1) 0%,
       rgba(255, 38, 0, 1) 100%
-    );
-    display: none;
+      );
   }
 }
 header {
@@ -154,33 +164,171 @@ header {
     }
   }
 }
+
+main {
+  width: 100%;
+  height: auto;
+  padding: 20px;
+
+  h2#title {
+    font-size: 32px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  #advantages-part {
+    width: inherit;
+    #advanteges-container {
+      width: inherit;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-top: 50px;
+      #contents {
+        border: 1px solid #000;
+        border-radius: 16px;
+        width: 440px;
+        height: 200px;
+        margin: 10px;
+        padding: 12px;
+        display: inherit;
+        transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+        &:hover {
+          color: #fff;
+          transform: scale(1.2);
+        }
+        #contents:nth-child(1):hover {
+          background: linear-gradient(
+            70.8deg,
+            rgb(253, 70, 90) 24%,
+            rgb(31, 42, 147) 92.4%
+          );
+        }
+        #contents:nth-child(2):hover {
+          background: radial-gradient(
+            circle at 10% 20%,
+            rgb(255, 131, 61) 0%,
+            rgb(249, 183, 23) 90%
+          );
+        }
+        #contents:nth-child(3):hover {
+          background: linear-gradient(
+            109.6deg,
+            rgb(5, 85, 84) 11.2%,
+            rgb(64, 224, 208) 91.1%
+          );
+        }
+        #contents:hover:nth-child(4) {
+          background: radial-gradient(
+            circle at 10% 20%,
+            rgb(99, 55, 255) 0%,
+            rgb(39, 170, 255) 90%
+          );
+        }
+
+        img {
+          width: 200px;
+        }
+        #info-ad {
+          padding: 10px;
+          position: relative;
+          .rigt-dot {
+            position: absolute;
+            padding: 12px;
+            border: 1px solid #000;
+            border-radius: 50%;
+            top: 0;
+            right: 0;
+          }
+        }
+      }
+    }
+  }
+
+  #teachers-part {
+    padding: 50px 10px;
+
+    #container-of-tr {
+      display: flex;
+      justify-content: center;
+      padding-top: 90px;
+      display: flex;
+      
+      #teachers {
+        color: #fff;
+        background-color: #800503;
+        width: 500px;
+        height: 530px;
+        text-align: center;
+        border-radius: 17px;
+        img {
+          position: relative;
+          top: -60px;
+          border-radius: 24px;
+          width: 460px;
+        }
+        h2{
+          font-size: 32px;
+        }
+        p{
+          margin: 10px;
+        }
+        a{
+          text-decoration: none;
+          color: #fff;
+          padding: 10px 20px;
+          background: linear-gradient(302deg, rgba(255,89,0,1) 0%, rgba(254,229,116,1) 100%);
+          font-size: 22px;
+          font-weight: 700;
+          position: relative;
+          top: 30px;
+          border-radius: 22px;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 660px) {
   nav {
     #nav-res {
-      transition: 0.4s all cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      transition: 0.2s all ease-in;
       position: fixed;
-      top: -100%;
-      left: 0;
-      padding: 70px 30px;
+      top: 0;
+      left: -100%;
+      padding: 100px 0;
       flex-direction: column;
+      align-items: center;
       width: 100%;
       height: 100vh;
       backdrop-filter: blur(10px);
-      height: auto;
+      height: 100%;
       z-index: 110;
+      li {
+        margin: 5px;
+        padding: 20px;
+        border-radius: 20px;
+        width: 90%;
+        background-color: #ffffff81;
+        text-align: center;
+        a{  
+          color: #fff;
+        }
+      }
     }
-    button {
+    #menu {
       display: block;
       z-index: 130;
     }
   }
-  header{
+  header {
     flex-direction: column;
-    #hero{
-      width: 300px;
-      height: 300px;
-      img{
-        width: inherit;
+    #hero {
+      #fancy-hero-shape {
+        width: 300px;
+        height: 300px;
+        img {
+          width: inherit;
+        }
       }
     }
   }
