--- a/styles.scss
+++ b/styles.scss
@@ -17,7 +17,7 @@ body {
   height: 100vh;
   background: $backhground-primary-clr;
   overflow-x: hidden;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
 }
 nav {
   z-index: 110;
@@ -30,7 +30,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  #logo{
+  #logo {
     z-index: 120;
   }
   ul {
@@ -57,12 +57,12 @@ nav {
       90deg,
       rgba(255, 158, 0, 1) 0%,
       rgba(255, 38, 0, 1) 100%
-      );
+    );
   }
 }
 header {
   max-width: 100%;
-  height: 120vh;
+  height: 100vh;
   display: flex;
   justify-content: space-around;
   padding: 40px 10px;
@@ -192,9 +192,10 @@ main {
         padding: 12px;
         display: inherit;
         transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+        scale: 0.9;
         &:hover {
+          scale: 1;
           color: #fff;
-          transform: scale(1.2);
         }
         #contents:nth-child(1):hover {
           background: linear-gradient(
@@ -252,7 +253,7 @@ main {
       justify-content: center;
       padding-top: 90px;
       display: flex;
-      
+
       #teachers {
         color: #fff;
         background-color: #800503;
@@ -266,17 +267,21 @@ main {
           border-radius: 24px;
           width: 460px;
         }
-        h2{
+        h2 {
           font-size: 32px;
         }
-        p{
+        p {
           margin: 10px;
         }
-        a{
+        a {
           text-decoration: none;
           color: #fff;
           padding: 10px 20px;
-          background: linear-gradient(302deg, rgba(255,89,0,1) 0%, rgba(254,229,116,1) 100%);
+          background: linear-gradient(
+            302deg,
+            rgba(255, 89, 0, 1) 0%,
+            rgba(254, 229, 116, 1) 100%
+          );
           font-size: 22px;
           font-weight: 700;
           position: relative;
@@ -286,48 +291,87 @@ main {
       }
     }
   }
+  #contact{
+    width: inherit;
+    height: 100vh;
+
+  }
 }
+
+
+
+
 
 @media screen and (max-width: 660px) {
   nav {
+    padding: 0;
+
     #nav-res {
+      backdrop-filter: blur(10px);
       transition: 0.2s all ease-in;
       position: fixed;
       top: 0;
       left: -100%;
-      padding: 100px 0;
+      padding-top: 100px;
       flex-direction: column;
       align-items: center;
       width: 100%;
-      height: 100vh;
-      backdrop-filter: blur(10px);
       height: 100%;
       z-index: 110;
+
+      &.active {
+        left: 0; // Slide in the menu when active
+      }
+
       li {
+        width: 90%;
         margin: 5px;
         padding: 20px;
         border-radius: 20px;
-        width: 90%;
         background-color: #ffffff81;
+        box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+          rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+          rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
         text-align: center;
-        a{  
+
+        a {
+          padding: 0;
           color: #fff;
         }
       }
     }
+
     #menu {
       display: block;
       z-index: 130;
     }
   }
+
   header {
     flex-direction: column;
+
     #hero {
       #fancy-hero-shape {
         width: 300px;
         height: 300px;
+
         img {
           width: inherit;
+        }
+      }
+    }
+  }
+
+  main {
+    #advantages-part {
+      #advanteges-container {
+        
+        flex-wrap: nowrap;
+        overflow: scroll;
+        #contents{
+          width: 400px;
+          height: auto;
+          flex-direction: column;
         }
       }
     }
