--- a/styles.scss
+++ b/styles.scss
@@ -10,14 +10,14 @@
   background-color: #fff;
   color: #f7cf31;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 10px;
 }
 
 $backhground-primary-clr: #f7cf31;
 $primary-txt-clr: #d8d9db;
 $secondary-txt-clr: #000000cb;
-html{
+html {
   scroll-behavior: smooth;
 }
 body {
@@ -171,46 +171,50 @@ header {
   }
 }
 
-main{
+main {
   width: 100%;
   height: auto;
-  #title{
+  #title {
     font-size: clamp(22px, 4vw, 42px);
+    text-align: center;
   }
-  #branches{
+  #branches {
     width: inherit;
     height: 80vh;
     text-align: center;
-    .branch-cont{
+    .branch-cont {
       width: inherit;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      #branch{
+      #branch {
         width: 500px;
         height: 400px;
-        border-radius: 16px;       
-        background-image: url(https://i.pinimg.com/originals/40/c6/2d/40c62dd50fb7178df00b94142b99922a.jpg); 
+        border-radius: 16px;
+        background-image: url(https://i.pinimg.com/originals/40/c6/2d/40c62dd50fb7178df00b94142b99922a.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         margin: 10px;
         position: relative;
         scale: 0.9;
-        &:hover{
-          scale: 1.0;
+        &:hover {
+          scale: 1;
         }
-        button{
+        button {
           position: absolute;
           right: 27px;
           bottom: 27px;
           padding: 22px;
-          
+          border-radius: 12px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
       }
     }
   }
-  #contact{
+  #contact {
     flex-wrap: wrap;
     width: inherit;
     height: 80vh;
@@ -218,13 +222,13 @@ main{
     justify-content: space-evenly;
     align-items: center;
     background: url(assets/main/contact/contact-bg.png);
-    .info{
-      h1{
+    .info {
+      h1 {
         font-size: clamp(23px, 3vw, 44px);
         color: #fff;
       }
     }
-    form{
+    form {
       border-radius: 18px;
       background-color: #ffffff;
       width: 400px;
@@ -232,88 +236,90 @@ main{
       padding: 17px;
       display: flex;
       flex-direction: column;
-      *{
+      * {
         margin: 11px;
         padding: 12px;
       }
-      input{
+      input {
         outline: none;
         border: none;
         border-bottom: 1.7px solid #f7cf31;
       }
-      button{
+      button {
         border: none;
         border-radius: 12px;
         color: #fff;
         font-weight: 600;
-        background: linear-gradient(90deg, rgba(255,89,0,1) 0%, rgba(255,209,0,1) 100%);
+        background: linear-gradient(
+          90deg,
+          rgba(255, 89, 0, 1) 0%,
+          rgba(255, 209, 0, 1) 100%
+        );
+      }
+    }
+  }
+ 
+}
+
+@media screen and (max-width: 660px) {
+  nav {
+    padding: 0;
+    #nav-res.active {
+      left: 0; /* Show the menu */
+    }
+    #nav-res {
+      backdrop-filter: blur(10px);
+      transition: 0.2s all ease-in;
+      position: fixed;
+      top: 0;
+      left: -100%;
+      padding-top: 100px;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      z-index: 110;
+
+      &.active {
+        left: 0; // Slide in the menu when active
+      }
+
+      li {
+        width: 90%;
+        margin: 5px;
+        padding: 20px;
+        border-radius: 20px;
+        background-color: #ffffff81;
+        box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+          rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+          rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+        text-align: center;
+
+        a {
+          padding: 0;
+          color: #fff;
+        }
+      }
+    }
+
+    #menu {
+      display: block;
+      z-index: 130;
+    }
+  }
+
+  header {
+    flex-direction: column;
+
+    #hero {
+      #fancy-hero-shape {
+        width: 300px;
+        height: 300px;
+
+        img {
+          width: inherit;
+        }
       }
     }
   }
 }
-
-
-  @media screen and (max-width: 660px) {
-    nav {
-      padding: 0;
-      #nav-res.active {
-        left: 0; /* Show the menu */
-      }
-      #nav-res {
-        backdrop-filter: blur(10px);
-        transition: 0.2s all ease-in;
-        position: fixed;
-        top: 0;
-        left: -100%;
-        padding-top: 100px;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        z-index: 110;
-
-        &.active {
-          left: 0; // Slide in the menu when active
-        }
-
-        li {
-          width: 90%;
-          margin: 5px;
-          padding: 20px;
-          border-radius: 20px;
-          background-color: #ffffff81;
-          box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
-            rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-            rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-          text-align: center;
-
-          a {
-            padding: 0;
-            color: #fff;
-          }
-        }
-      }
-
-      #menu {
-        display: block;
-        z-index: 130;
-      }
-    }
-
-    header {
-      flex-direction: column;
-
-      #hero {
-        #fancy-hero-shape {
-          width: 300px;
-          height: 300px;
-
-          img {
-            width: inherit;
-          }
-        }
-      }
-    }
-
-   
-  }
