--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@ body {
   height: 100vh;
   background: #f7cf31;
   overflow-x: hidden;
+  background-image: url(assets/header-bg-img/Group\ 327.png);
+  background-position: center;
+  background-attachment: fixed;
 }
 
 nav {
@@ -77,9 +80,6 @@ header {
   padding: 40px 10px;
   flex-wrap: wrap;
   align-items: center;
-  background-image: url(assets/header-bg-img/Group\ 327.png);
-  background-position: center;
-  background-attachment: fixed;
 }
 header .description h1 {
   font-weight: 900;
@@ -169,6 +169,7 @@ main #branches {
 main #branches .branch-cont {
   width: inherit;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -196,6 +197,59 @@ main #branches .branch-cont #branch button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+main #cources {
+  width: inherit;
+  height: 100vh;
+  padding: 20px;
+  margin: 10pxz;
+}
+main #cources .cource-container {
+  width: inherit;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main #cources .cource-container #cource {
+  max-width: 500px;
+  border-radius: 32px;
+  color: #fff;
+  margin: 10px;
+  display: inherit;
+  justify-content: space-evenly;
+  align-items: center;
+  scale: 0.9;
+}
+main #cources .cource-container #cource:hover {
+  scale: 1;
+}
+main #cources .cource-container #cource:nth-child(1) {
+  background: linear-gradient(90deg, rgb(153, 234, 255) 0%, rgb(0, 5, 240) 100%);
+}
+main #cources .cource-container #cource:nth-child(2) {
+  background: linear-gradient(274deg, rgb(55, 0, 255) 0%, rgb(255, 102, 0) 100%);
+}
+main #cources .cource-container #cource:nth-child(3) {
+  background: linear-gradient(274deg, rgb(171, 255, 153) 0%, rgb(22, 130, 0) 100%);
+}
+main #cources .cource-container #cource:nth-child(4) {
+  background: linear-gradient(274deg, rgb(255, 152, 152) 0%, rgb(255, 102, 0) 100%);
+}
+main #cources .cource-container #cource:nth-child(5) {
+  background: linear-gradient(90deg, rgb(255, 89, 0) 0%, rgb(0, 255, 222) 100%);
+}
+main #cources .cource-container #cource #level-cource {
+  margin: 10px;
+}
+main #cources .cource-container #cource #level-cource h2 {
+  font-size: 44px;
+  text-align: center;
+  line-height: 120px;
+}
+main #cources .cource-container #cource p {
+  max-width: 500px;
 }
 main #contact {
   flex-wrap: wrap;
