--- a/styles.scss
+++ b/styles.scss
@@ -24,6 +24,9 @@ body {
   height: 100vh;
   background: $backhground-primary-clr;
   overflow-x: hidden;
+  background-image: url(assets/header-bg-img/Group\ 327.png);
+  background-position: center;
+  background-attachment: fixed;
 }
 nav {
   z-index: 110;
@@ -74,9 +77,7 @@ header {
   padding: 40px 10px;
   flex-wrap: wrap;
   align-items: center;
-  background-image: url(assets/header-bg-img/Group\ 327.png);
-  background-position: center;
-  background-attachment: fixed;
+
 
   .description {
     h1 {
@@ -185,6 +186,7 @@ main {
     .branch-cont {
       width: inherit;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
       text-align: center;
@@ -210,6 +212,62 @@ main {
           display: flex;
           justify-content: center;
           align-items: center;
+        }
+      }
+    }
+  }
+  
+  #cources{
+    width: inherit;
+    height: 100vh;
+    padding: 20px;
+    margin: 10pxz;
+    .cource-container{
+      width: inherit;
+      height: inherit;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      #cource{
+        max-width: 500px;
+        border-radius: 32px;
+        color: #fff;
+        margin: 10px;
+        display: inherit;
+        justify-content: space-evenly;
+        align-items: center;
+        scale: 0.9;
+        &:hover{
+          scale: 1.0;
+        }
+        &:nth-child(1){
+          background: linear-gradient(90deg, rgba(153,234,255,1) 0%, rgba(0,5,240,1) 100%);
+        }
+        &:nth-child(2){
+          background: linear-gradient(274deg, rgba(55,0,255,1) 0%, rgba(255,102,0,1) 100%);
+        }
+        &:nth-child(3){
+          background: linear-gradient(274deg, rgba(171,255,153,1) 0%, rgba(22,130,0,1) 100%);
+        }
+        &:nth-child(4){
+          background: linear-gradient(274deg, rgba(255,152,152,1) 0%, rgba(255,102,0,1) 100%);
+        }
+        &:nth-child(5){
+          background: linear-gradient(90deg, rgba(255,89,0,1) 0%, rgba(0,255,222,1) 100%);
+        }
+        
+        #level-cource{
+          margin: 10px;
+          h2{
+            font-size: 44px;
+            text-align: center;
+            line-height: 120px;
+
+          }
+        }
+        p{
+          max-width: 500px;
         }
       }
     }
